# Linguist-RS

./: .gitignore  Cargo.toml  LICENSE  README.md  output.glue
data/: languages.yml  popular.yml
src/: blob.rs  classifier.rs  generated.rs  heuristics.rs  language.rs  lib.rs  main.rs  output.glue  repository.rs  threading.rs  vendor.rs
src/data/: grammars.rs  languages.rs  mod.rs  samples.rs
src/strategy/: extension.rs  filename.rs  manpage.rs  mod.rs  modeline.rs  shebang.rs  xml.rs
