[package]
name = "linguist"
version = "1.0.0"
edition = "2021"
description = "A Rust port of GitHub Linguist for language detection"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Regular expressions
regex = "1.8"
fancy-regex = "0.11" # For some complex regex patterns like the modeline detector

# File operations
walkdir = "2.3"  # For walking directories
memmap2 = "0.7"  # For memory mapping large files

# String handling
encoding_rs = "0.8"  # Character encoding detection (similar to CharlockHolmes)
encoding_rs_io = "0.1"

# Git integration
git2 = "0.17"  # Libgit2 bindings

# Hashing
sha2 = "0.10"  # For SHA256 calculations

# Other utilities
lazy_static = "1.4"  # For lazy initialization of static variables
rayon = "1.7"  # For parallel processing
thiserror = "1.0"  # Better error handling
clap = { version = "4.3", features = ["derive"] } # Command line argument parsing

blob = "0.3.0"  # For handling binary data

[dev-dependencies]
tempfile = "3.6"  # For creating temporary files/directories in tests
pretty_assertions = "1.3"  # Better test assertions
